feat: improve prompt

--- a/prompt_zh.jinja2
+++ b/prompt_zh.jinja2
@@ -83,3 +83,4 @@ RSI14: {{ symbol['rsi_14'] }}
 ```
 只输出JSON格式的正文，不要使用markdown wrap起来。
 注：一个币对只能同时开一个仓位，如果你要修改某个币对仓位，先平仓再开。**在开仓之前，先审视你的可用余额是否足够**，**同时关注多、空信号。**
+**始终检查你的可用余额是否高于你的开仓价值。**
