--- a/prompt_zh.jinja2
+++ b/prompt_zh.jinja2
@@ -36,7 +36,7 @@ RSI14: {{ symbol['rsi_14'] }}
   "type": "open_position",
   "side": ("buy"(多) 或 "sell"(空)，大小写敏感)
   "pair":(要交易的币对，如BTC-USDT),
-  "amount":(交易数量，单位为USDT，最小15),
+  "amount":(交易数量，单位为USDT),
   "leverage":(杠杆倍数，最小1，最大10),
   "tp": (止盈价格，单位为USDT),
   "sl": (止损价格，单位为USDT),
