--- a/prompt_zh.jinja2
+++ b/prompt_zh.jinja2
@@ -3,7 +3,7 @@
 当前时间：{{ current_time }}
 你现在的仓位如下：
 {% for position in positions %}
-{{position['symbol']}}: {{ position['side'] }}, 杠杆{{ position['lever'] }}x, 仓位大小{{position['amount']}} USDT, 未实现PnL{{ position['upnl'] }} USDT({{ position['upnl_ratio'] }}%)，止盈{{ position['tp'] }} USDT，止损{{ position['sl'] }} USDT，开仓时间{{ position['open_time'] }}
+{{position['symbol']}}: {{ position['side'] }}, 杠杆{{ position['lever'] }}x, 仓位大小{{position['amount']}} USDT(杠杆后), 未实现PnL{{ position['upnl'] }} USDT({{ position['upnl_ratio'] }}%)，止盈{{ position['tp'] }} USDT，止损{{ position['sl'] }} USDT，开仓时间{{ position['open_time'] }}
 {% else %}
 (暂无仓位)
 {% endfor %}
